--- a/css/main.css
+++ b/css/main.css
@@ -75,3 +75,84 @@ button {
     bottom: 80px;
     min-width: 100px;
 }
+
+@media only screen and (max-width: 540px) {
+
+    body > #multiplication-box {
+        font-size: 16px;
+    }
+
+    h1 {
+        text-align: center;
+        color: rgb(255, 159, 191);
+        font-family: Arial;
+        font-size: 1em;
+    }
+    
+    #multiplication-box {
+        min-width: 60vw;
+        max-width: 80vw;
+        height: 70vh;
+        background-color: white;
+        color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 2vh auto;
+        
+    }
+    
+    #first-num, #second-num, #user-answer, #times, #equals{
+        padding: 5px;
+        font-size: 5em;
+    }
+    
+    #second-num {
+        padding-right: 0.55em;
+    }
+    
+    .answer-row {
+        max-width: 80%;
+        min-height: 5em;
+        display: flex;
+        align-items: center;
+    }
+    
+    #user-answer {
+        max-width: 100px;
+    }
+    
+  
+    
+    #answer {
+        visibility: hidden;
+        background-color: purple;
+        color: white;
+        align-self: flex-end;
+        padding: 5px;
+        margin-right: 25%;
+    }
+    
+    button {
+        margin-right: 2px;
+        padding: 10px;
+        align-self: flex-end;
+        background: #ddd;
+        color: black;
+        border: 5px solid purple;
+        font-weight: bold;
+        margin-bottom: 2px;
+    }
+    
+    #enter-button {
+        min-width: 48px;
+        min-height: 48px;
+        position: relative;
+        left: 5px;
+        bottom: 30px;
+        font-size: 0.5em;
+    }
+
+   
+}
